--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -35,7 +35,7 @@
         <DockPanel>
             <StackPanel HorizontalAlignment="Left" Margin="0,0,20,0" DockPanel.Dock="Top" Width="500">
                 <TextBlock Text="ShipWorks One Balance" FontSize="13" Margin="20,10,0,0" FontWeight="Bold"/>
-                <ContentControl Visibility="{Binding ShowBanner, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <ContentControl Visibility="{Binding ShowBanner, Converter={StaticResource BooleanToVisibilityConverter}}" IsTabStop="False">
                     <local:OneBalanceEnableUpsBannerWpfControl DataContext="{Binding BannerContext}" Margin="50,15,0,0" />
                 </ContentControl>
                 <!--#region Overview-->
@@ -90,7 +90,7 @@
                     <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/dhl.png" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
                     <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0" Foreground="DarkGray"/>
                 </Grid>
-                <ContentControl Margin="50,0,0,0" Visibility="{Binding ShowDhlBanner, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <ContentControl Margin="50,0,0,0" Visibility="{Binding ShowDhlBanner, Converter={StaticResource BooleanToVisibilityConverter}}" IsTabStop="False">
                     <local:OneBalanceAddDhlExpressBanner DataContext="{Binding DhlBannerContext}" Margin="0,10,0,0" />
                 </ContentControl>
                 <!--#endregion-->
@@ -115,7 +115,7 @@
                     <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" Visibility="{Binding Loading, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" Grid.Column="1"/>
 
                     <TextBlock Text="Use automatic funding" Grid.Row="1" Margin="0,20,10,0"/>
-                    <CheckBox Margin="0,20,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding IsAutoFund}"/>
+                    <CheckBox Margin="0,20,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
 
                     <TextBlock Text="When balance drops below" Grid.Row="2" Margin="0,20,10,0"/>
                     <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
