--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -94,36 +94,7 @@
                     <local:OneBalanceAddDhlExpressBanner DataContext="{Binding DhlBannerContext}" Margin="0,10,0,0" />
                 </ContentControl>
                 <!--#endregion-->
-                <!--#region Auto Fund-->
-                <Border Margin="50,30,0,0" BorderThickness="0,0,0,2" BorderBrush="DarkGray">
-                    <TextBlock Margin="0,0,0,10" Text="Fund Automatically" Style="{StaticResource TextBlock.SectionHeader}"/>
-                </Border>
-                <TextBlock Text="{Binding AutoFundError}" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
-                <Grid HorizontalAlignment="Left" Margin="90,20,0,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="Current Account Balance" />
-                    <TextBlock Text="Getting Balance...." Grid.Column="1" Visibility="{Binding Loading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                    <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" Visibility="{Binding Loading, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" Grid.Column="1"/>
-
-                    <TextBlock Text="Use automatic funding" Grid.Row="1" Margin="0,20,10,0"/>
-                    <CheckBox Margin="0,20,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
-
-                    <TextBlock Text="When balance drops below" Grid.Row="2" Margin="0,20,10,0"/>
-                    <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
-
-                    <TextBlock Text="Automatically fund by this amount" Grid.Row="3" Margin="0,20,10,0"/>
-                    <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
-                </Grid>
-                <!--#endregion-->
+                <local:OneBalanceAutoFundControl/>
             </StackPanel>
             <TextBlock Text="UPS, the UPS Shield trademark, the UPS Ready mark, the UPS Developer Kit mark and the Color Brown are trademarks of United Service of America, Inc. All Rights Reserved"
                            Margin="0,80,0,0" DockPanel.Dock="Bottom" FontSize="8" TextWrapping="Wrap" VerticalAlignment="Bottom" TextAlignment="Center"/>
