--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
@@ -26,7 +26,7 @@
             <TextBlock Margin="0,0,0,10" Text="Fund Automatically" Style="{StaticResource TextBlock.SectionHeader}"/>
         </Border>
         <TextBlock Text="{Binding AutoFundError}" Margin="40,10,0,0" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
-        <Grid HorizontalAlignment="Left" Margin="40,20,0,0">
+        <Grid HorizontalAlignment="Left" Margin="40,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -35,20 +35,16 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Current Account Balance" />
-            <TextBlock Text="Getting Balance...." Grid.Column="1" Visibility="{Binding Loading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" Visibility="{Binding Loading, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" Grid.Column="1"/>
 
-            <TextBlock Text="Use automatic funding" Grid.Row="1" Margin="0,20,10,0"/>
-            <CheckBox Margin="0,20,0,0" Grid.Row="1" Grid.Column="2" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
+            <TextBlock Text="Use automatic funding"  Margin="0,0,10,0"/>
+            <CheckBox Margin="0,0,0,0"  Grid.Column="1" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
 
-            <TextBlock Text="When balance drops below" Grid.Row="2" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="When balance drops below" Grid.Row="1" Margin="0,20,10,0"/>
+            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
 
-            <TextBlock Text="Automatically fund by this amount" Grid.Row="3" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,20,10,0"/>
+            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
         </Grid>
     </StackPanel>
 </UserControl>
