--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
@@ -25,26 +25,26 @@
         <Border BorderThickness="0,0,0,2" BorderBrush="DarkGray">
             <TextBlock Margin="0,0,0,10" Text="Fund Automatically" Style="{StaticResource TextBlock.SectionHeader}"/>
         </Border>
-        <TextBlock Text="{Binding AutoFundError}" Margin="40,10,0,0" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
         <Grid HorizontalAlignment="Left" Margin="40,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="Use automatic funding"  Margin="0,0,10,0"/>
-            <CheckBox Margin="0,0,0,0"  Grid.Column="1" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
+            <CheckBox Margin="0,0,0,0"  Grid.Column="1" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-            <TextBlock Text="When balance drops below" Grid.Row="1" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="When balance drops below" Grid.Row="1" Margin="0,0,10,0"/>
+            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0,0,0,0"/>
 
-            <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,0,10,0"/>
+            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,0,0,0"/>
         </Grid>
+        <TextBlock Text="{Binding AutoFundError}" Margin="40,2,0,0" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
     </StackPanel>
 </UserControl>
