--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
@@ -16,7 +16,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="TextBlock" BasedOn="{StaticResource Grid.TextBlock.Label}" />
-            <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <ui:BooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" Invert="True" />
         </ResourceDictionary>
     </UserControl.Resources>
     <StackPanel>
@@ -36,10 +36,10 @@
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/usps.png" Style="{StaticResource Image.Icon}"/>
             <TextBlock Text="USPS from Stamps.com" Grid.Column="1" Margin="5,0,0,0"/>
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/ups.png" Style="{StaticResource Image.Icon}" Grid.Row="1"/>
-            <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0"/>
+            <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Foreground="{Binding UpsTextColor}"/>
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/dhl.png" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
             <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0" Foreground="{Binding DhlTextColor}"/>
-            <Button HorizontalAlignment="Right"  Command="{Binding ShowSetupWizardCommand}" Grid.Column="2" Grid.Row="2" Visibility="{Binding LocalDhlAccountEnabled, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Button HorizontalAlignment="Right"  Command="{Binding ShowSetupWizardCommand}" Grid.Column="2" Grid.Row="2" Visibility="{Binding LocalDhlAccountEnabled, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                 <Button.CommandParameter>
                     <s:ShipmentTypeCode>DhlExpress</s:ShipmentTypeCode>
                 </Button.CommandParameter>
