--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
@@ -16,6 +16,7 @@
 
             <Style TargetType="TextBlock" BasedOn="{StaticResource Grid.TextBlock.Label}" />
             <ui:BooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" Invert="True" />
+            <ui:BooleanToSolidColorBrushConverter x:Key="BooleanToSolidColorBrushConverter"/>
         </ResourceDictionary>
     </UserControl.Resources>
     <StackPanel>
@@ -35,9 +36,9 @@
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/usps.png" Style="{StaticResource Image.Icon}"/>
             <TextBlock Text="USPS from Stamps.com" Grid.Column="1" Margin="5,0,0,0"/>
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/ups.png" Style="{StaticResource Image.Icon}" Grid.Row="1"/>
-            <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Foreground="{Binding UpsTextColor}"/>
+            <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Foreground="{Binding UpsEnabled, Converter={StaticResource BooleanToSolidColorBrushConverter}}"/>
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/dhl.png" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
-            <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0" Foreground="{Binding DhlTextColor}"/>
+            <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0" Foreground="{Binding RemoteDhlEnabled, Converter={StaticResource BooleanToSolidColorBrushConverter}}"/>
             <Button HorizontalAlignment="Right"  Command="{Binding ShowSetupWizardCommand}" Grid.Column="2" Grid.Row="2" Visibility="{Binding LocalDhlAccountEnabled, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                 <Button.CommandParameter>
                     <s:ShipmentTypeCode>DhlExpress</s:ShipmentTypeCode>
