--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
@@ -45,6 +45,6 @@
             <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,20,10,0"/>
             <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
         </Grid>
-        <TextBlock Text="{Binding AutoFundError}" Margin="40,10,0,0" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
+        <TextBlock Text="{Binding AutoFundError}" Margin="40,10,0,0" Grid.ColumnSpan="2" Foreground="{StaticResource Red}" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
     </StackPanel>
 </UserControl>
