--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAutoFundControl.xaml
@@ -36,14 +36,14 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Text="Use automatic funding"  Margin="0,0,10,0"/>
-            <CheckBox Margin="0,0,0,0"  Grid.Column="1" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left"/>
+            <TextBlock Text="Use automatic funding" Margin="0,0,15,0"/>
+            <CheckBox Margin="0,0,0,0"  Grid.Column="1" IsChecked="{Binding IsAutoFund}" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
 
-            <TextBlock Text="When balance drops below" Grid.Row="1" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="When balance drops below" Grid.Row="1" Margin="0,12,15,0"/>
+            <TextBox Text="{Binding MinimumBalance, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0,10,0,0"/>
 
-            <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,20,10,0"/>
-            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+            <TextBlock Text="Automatically fund by this amount" Grid.Row="2" Margin="0,10,15,0"/>
+            <TextBox Text="{Binding AutoFundAmount, Converter={StaticResource EmptyMoney}}" IsEnabled="{Binding IsAutoFund}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,10,0,0"/>
         </Grid>
         <TextBlock Text="{Binding AutoFundError}" Margin="40,10,0,0" Grid.ColumnSpan="2" Foreground="{StaticResource Red}" TextWrapping="Wrap" Visibility="{Binding AutoFundError, Converter={StaticResource NullVisibilityConverter}}" MaxWidth="500"/>
     </StackPanel>
