--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceCarrierAccountControl.xaml
@@ -37,13 +37,13 @@
             <TextBlock Text="USPS from Stamps.com" Grid.Column="1" Margin="5,0,0,0"/>
             <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/ups.png" Style="{StaticResource Image.Icon}" Grid.Row="1"/>
             <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Foreground="{Binding UpsEnabled, Converter={StaticResource BooleanToSolidColorBrushConverter}}"/>
-            <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/dhl.png" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
-            <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,0,0,0" Foreground="{Binding LocalDhlAccountEnabled, Converter={StaticResource BooleanToSolidColorBrushConverter}}"/>
+            <Image Source="/ShipWorks.Core;component/Resources/Shipping/Icons/dhl.png" Margin="0,2,0,0" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
+            <TextBlock Text="DHL Express from ShipWorks" Grid.Column="1" Grid.Row="2" Margin="5,2,0,0" Foreground="{Binding LocalDhlAccountEnabled, Converter={StaticResource BooleanToSolidColorBrushConverter}}"/>
             <Button HorizontalAlignment="Right"  Command="{Binding ShowSetupWizardCommand}" Grid.Column="2" Grid.Row="2" Visibility="{Binding LocalDhlAccountEnabled, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                 <Button.CommandParameter>
                     <s:ShipmentTypeCode>DhlExpress</s:ShipmentTypeCode>
                 </Button.CommandParameter>
-                <TextBlock Text="Add DHL Express" Margin="5,2,5,2"/>
+                <TextBlock Text="Add DHL Express" Margin="5,0,5,2"/>
             </Button>
         </Grid>
     </StackPanel>
