--- a/Code/ShipWorks.SingleScan/AutoPrintConfirmation/AutoPrintConfirmationControl.xaml
+++ b/Code/ShipWorks.SingleScan/AutoPrintConfirmation/AutoPrintConfirmationControl.xaml
@@ -30,6 +30,12 @@
                     Height="25"
                     Padding="10 0 10 0"
                     Margin="0 0 8 0"
+                    Content="{Binding ContinueOptionalText}"
+                    Command="{Binding ContinueOptionalClickCommand}" />
+                <Button
+                    Height="25"
+                    Padding="10 0 10 0"
+                    Margin="0 0 8 0"
                     Content="{Binding ContinueText}"
                     Command="{Binding ContinueClickCommand}" />
                 <Button
