TP#36993: Create UACButton and use it for the update button in ApiSettingsControl. Add native method to get windows icons.

--- a/Code/ShipWorks.UI/Themes/Generic.xaml
+++ b/Code/ShipWorks.UI/Themes/Generic.xaml
@@ -10,5 +10,6 @@
         <ResourceDictionary Source="/ShipWorks.UI;component/Themes/Controls/WeightControl.xaml" />
         <ResourceDictionary Source="/ShipWorks.UI;component/Themes/Controls/WaitSpinner.xaml" />
         <ResourceDictionary Source="/ShipWorks.UI;component/Themes/Controls/UnitTextBox.xaml" />
+        <ResourceDictionary Source="/ShipWorks.UI;component/Themes/Controls/UACButton.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
