--- a/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:api="clr-namespace:ShipWorks.ApplicationCore.Settings.Api;assembly=ShipWorks.Core"
              xmlns:attachedProperties="clr-namespace:ShipWorks.UI.AttachedProperties"
+             xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance api:ApiSettingsViewModel}"
              FontSize="11"
@@ -13,9 +14,10 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/ShipWorks.UI;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="/ShipWorks.UI;component/Themes/Controls/UACButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="{x:Type Button}">
-                <Setter Property="Width" Value="75"/>
+                <Setter Property="Width" Value="82"/>
                 <Setter Property="Height" Value="23"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
@@ -84,11 +86,13 @@
                      Margin="10 0 10 0"
                      VerticalContentAlignment="Center"
                      Height="23"/>
-            <Button Grid.Row="1" 
+            <controls:UACButton Grid.Row="1"
                     Grid.Column="2"
                     Content="Update"
                     Command="{Binding UpdateCommand}"
-                    Margin="0 0 10 0"/>
+                    Margin="0 0 10 0"
+                    HorizontalContentAlignment="Center"
+                    Template="{StaticResource UACButtonTemplate}"/>
         </Grid>
         <TextBlock Grid.Row="2"
                    Margin="10 0 0 10">
