TP#37016: Fix Start/Stop button. Move ApiSettingsViewModel to ShipWorks.UI to speed up build times.

--- a/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:api="clr-namespace:ShipWorks.ApplicationCore.Settings.Api;assembly=ShipWorks.Core"
              xmlns:attachedProperties="clr-namespace:ShipWorks.UI.AttachedProperties"
              xmlns:controls="clr-namespace:ShipWorks.UI.Controls"
              xmlns:valueConverters="clr-namespace:ShipWorks.UI.ValueConverters"
+             xmlns:api="clr-namespace:ShipWorks.UI.Controls.Settings.Api"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance api:ApiSettingsViewModel}"
              FontSize="11"
