TP#37016: Fix changing port not working. Update save button text and enabled based on status.

--- a/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
@@ -145,8 +145,8 @@
                     Margin="5 0 0 0"
                     Content="{Binding SaveButtonText}"
                     Command="{Binding UpdateCommand}"
-                    ShowShield="{Binding SettingsChanged}"
-                    IsEnabled="{Binding SettingsChanged}"
+                    ShowShield="{Binding IsSaveEnabled}"
+                    IsEnabled="{Binding IsSaveEnabled}"
                     Template="{StaticResource UACButtonTemplate}"
                     Width="75"
                     Height="23"/>
