--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
         xmlns:c="http://schemas.shipworks.com/ui"
         mc:Ignorable="d"
-        Title="Add Money To One Balance" 
+        Title="Add Funds To One Balance" 
         Height="250" 
         Width="300" 
         Background="#FFF0F0F0"
