--- a/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
+++ b/Code/ShipWorks.UI/Controls/Settings/Api/ApiSettingsControl.xaml
@@ -66,7 +66,7 @@
                         Orientation="Horizontal"
                         HorizontalAlignment="Left"
                         Margin="5 0 0 10">
-                <TextBlock Text="{Binding Status}"
+                <TextBlock Text="{Binding Status, Converter={StaticResource EnumDescription}}"
                            HorizontalAlignment="Left"
                            Margin="0 0 10 0"
                            Width="44"/>
